--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,24 @@ p {
 }
 
 small {
+	color: #555555;
+}
 
+.none-decoration, a, a:hover, a:active, a:visited, a:focus {
+	text-decoration:none;
 }
 
 
+:lang(en) {
+	font-family: Palatino Linotype, Helvetica Neue, Helvetica, Arial, 'Open Sans', sans-serif;
+}
+
+:lang(cn) {
+	font-family: Georgia, "Times New Roman", "FangSong",  STFangSong, serif;
+}
 body {
 	margin: 0;
-	padding: 3rem 5rem;
+	padding: 2% 6%;
 
 	display: flex;
 	flex-direction: column;
@@ -40,8 +51,8 @@ header {
 }
 
 	.avator {
-		width: 10rem;
-		height: 10rem;
+		width: 15rem;
+		height: 15rem;
 		border-radius: 50%;
 	}
 
@@ -55,6 +66,7 @@ header {
 		text-align: left;
 		padding-left: 5%;
 		padding-right: 5%;
+		color: #1d1d1d;
 	}
 
 
@@ -62,14 +74,70 @@ header {
 	padding: 1em 0;
 }
 
+.publication{
+	display: block;
+}
+.publication-container{
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	padding: 1rem;
+}
+	.thumbnail-counter {
+		display: flex;
+		flex: 1;
+		align-items: center;
+		justify-content: flex-start;
+		padding: 0;
+		max-width: 15rem;
+	}
+		.thumbnail {
+			width: 14rem;
+			height: auto;
+			/*border-radius: 50%;*/
+		}
+
+	.paper-info-counter {
+		display: flex;
+		flex-direction: column;
+		flex: 4;
+		justify-content: left;
+		text-align: left;
+		padding-left: 0.5rem;
+		/*padding-right: 5%;*/
+	}
+		.paper-info-counter span{
+			display: inline-block;
+		}
+		.paper-info-counter a{
+			text-decoration: #0071a9;
+			padding-right: 0.5rem;
+		}
+		.paper-info-counter .abstract{
+			color: #555555;
+		}
+
+
 @media screen and (max-width: 992px) {
-  header {
-  		flex-direction: column;
-  }
+    header {
+        flex-direction: column;
+    }
+
+    .avator {
+        width: 10rem;
+        height: 10rem;
+        border-radius: 50%;
+    }
 }
 
 @media screen and (max-width: 600px) {
-  header {
-  		flex-direction: column;
-  }
+    header {
+        flex-direction: column;
+    }
+
+    .avator {
+        width: 10rem;
+        height: 10rem;
+        border-radius: 50%;
+    }
 }
