--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,35 @@
+/*
+	Designed and maintained by Yingshu Chen
+*/
+
+:root {
+	--blue: #007bff;
+	--indigo: #6610f2;
+	--purple: #6f42c1;
+	--pink: #e83e8c;
+	--red: #dc3545;
+	--orange: #fd7e14;
+	--yellow: #ffc107;
+	--green: #28a745;
+	--teal: #20c997;
+	--cyan: #17a2b8;
+	--white: #fff;
+	--gray: #6c757d;
+	--gray-dark: #343a40;
+	--primary: #F9A392;
+	--secondary: #6EBBF6;
+	--success: #28a745;
+	--info: #17a2b8;
+	--warning: #ffc107;
+	--danger: #dc3545;
+	--light: #FEF1EF;
+	--dark: #211E1C;
+}
+
+* {
+	color: #1d1d1d;
+}
+
 h1, h2, h3, h4, h5 {
 	margin-bottom: 0.5rem;
 	margin-top: 1rem;
@@ -5,6 +37,7 @@ h1, h2, h3, h4, h5 {
 
 p {
 	margin-bottom: 0;
+	margin-top: 0.5rem;
 }
 
 small {
@@ -12,8 +45,12 @@ small {
 }
 
 .none-decoration, a, a:hover, a:active, a:visited, a:focus {
-	text-decoration:none;
-	color: black;
+	text-decoration: none;
+	color: #0080b9;
+}
+a:hover {
+	color: #006d9b;
+	text-decoration: underline;
 }
 
 .link-style {
@@ -47,7 +84,8 @@ header {
 }
 
 .fancy-hr {
-	border: 1px solid #0071a9;
+	/*border: 1px solid #0071a9;*/
+	border: 1px solid var(--cyan);
 	box-shadow: 2px 2px 2px #eaebff;
 	width: 100%;
 	margin-left: auto;
@@ -123,7 +161,7 @@ header {
 			display: inline-block;
 		}
 		.paper-info-counter a{
-			text-decoration: #0071a9;
+			/*color: #0071a9;*/
 			padding-right: 0.5rem;
 		}
 		.paper-info-counter .abstract{
